# research

./: .dockerignore  .gitignore  .gitmodules  404.html  DEVELOPER.md  Dockerfile.backend  Makefile  README.md  SETUP.md  developer_md_content.txt  docker-compose.yml  environment.yml  generate_lineage.py  index.html  setup.py  sitemap.xml
gazettes/tracer/applications/gazette_tracer/: README.md  package-lock.json  package.json  pyproject.toml
legislation/: DEVELOPER.md  Makefile  README.md  docker-compose.yml  environment.yml  pyproject.toml
legislation/docs/src/data/: acts.json  all_acts.json
legislation/pylegislation/: cli.py  utils.py
legislation/pylegislation/research/: analyze.py  db.py  docs.py  dump.py  lineage.py  migrate.py  process.py  versions.py
legislation/pylegislation/research/api/: main.py
legislation/reports/database/dump/: analysis_dump_2026-01-17_13-40-23.json  analysis_dump_2026-01-17_14-31-02.json
legislation/reports/research/archive/: docs_all.tsv  docs_en.tsv
legislation/reports/research/lineage/: 19th-amendment-to-the-constitution-new.md  21st-amendment-to-the-constitution.md  a-d-m-j-religious-centre-bio-diversity-complex-trust-fund.md  active-liability-management.md  agrarian-development-act.md  agrarian-development.md  air-force.md  air-navigation-special-provisions.md  air-navigation.md  al-haj-abdul-jawad-alim-valiyullah-trust-incorporation-act-no-46.md  all-ceylon-jemmiyathul-ulama-incorporation.md  all-ceylon-sri-sumangala-social-services-and-welfare-association-incorporation.md  all-ceylon-telugu-congress-incorporation.md  allowances-to-plantation-workers.md  amaradeva-aesthetic-research-centre.md  animal-feed.md  animals.md  antiquities.md  anuradhapura-jaya-sri-maha-bodhi-development-fund-incorporation.md  appropriation-act-no-69.md  appropriation.md  army.md  asian-buddhist-congress-incorporation.md  ayurveda.md  banking.md  (+438 more)
legislation/scripts/: process_acts.js  start_backend.sh
legislation/tests/: test_add_act.py
legislation/ui/: package-lock.json  package.json
legislation/ui/app/: page.tsx
legislation/ui/tests/: analysis.spec.ts  analytics.spec.ts  dashboard.spec.ts  landing.spec.ts
(+564 files in other folders)
