[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pylegislation"
version = "0.1.0"
description = "Legislative research tools"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click",
    "requests",
    "pypdf",
    "sqlmodel",
    "fastapi",
    "uvicorn",
    "google-genai"
]

[project.scripts]
legislation = "pylegislation.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["pylegislation*"]
